feat: inclusao do historioa para cada insercao na secao